--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -11,16 +11,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Aventure</a>
+                <a class="nav-link" href="{{ path('app_aventure') }}">Aventure</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Codex
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Bestiaire</a></li>
-                  <li><a class="dropdown-item" href="#">Armes</a></li>
-                  <li><a class="dropdown-item" href="#">Personnages</a></li>
+                  <li><a class="dropdown-item" href="{{ path('app_codex_bestiaire') }}">Bestiaire</a></li>
+                  <li><a class="dropdown-item" href="{{ path('app_codex_armes') }}">Armes</a></li>
+                  <li><a class="dropdown-item" href="{{ path('app_codex_personnages') }}">Personnages</a></li>
                 </ul>
               </li>
             </ul>
@@ -47,7 +47,7 @@
             </li>
           </ul>
         {# {% elseif %} #}
-            <a class="btn btn-outline-success" href="#">Se connecter</a>
+            <a class="btn btn-outline-success" href="{{ path('app_utilisateur_connexion') }}">Se connecter</a>
         {# {% endif %} #}
         </div>
     </div>
