--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <div class="d-flex col-5">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="{{ path('app_homepage') }}">C&W</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                <a class="nav-link active" aria-current="page" href="{{ path('app_homepage') }}">Accueil</a>
               </li>
+              {% if is_granted('ROLE_USER') %}
               <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_aventure') }}">Aventure</a>
               </li>
+              {% endif %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Codex
@@ -33,7 +35,7 @@
           </form>
         </div>
         <div class="d-flex col-1">
-        {# {% if condition %} #}
+        {% if is_granted('ROLE_USER') %}
           <ul class="list-unstyled me-5 mb-2 mb-lg-0">
             <li class="nav-item">
             <li class="nav-item dropdown">
@@ -41,14 +43,17 @@
                 Profil
               </a>
               <ul class="dropdown-menu">
+                {% if is_granted('ROLE_ADMIN') %}
+                <li><a class="dropdown-item" href="{{ path('app_admin_dashboard') }}">Admin Dashboard</a></li>
+                {% endif %}
                 <li><a class="dropdown-item" href="#">Mon Compte</a></li>
-                <li><a class="dropdown-item" href="#">Se déconnecter</a></li>
+                <li><a class="dropdown-item" href="{{ path('app_deconnexion') }}">Se déconnecter</a></li>
               </ul>
             </li>
           </ul>
-        {# {% elseif %} #}
+        {% else %}
             <a class="btn btn-outline-success" href="{{ path('app_utilisateur_connexion') }}">Se connecter</a>
-        {# {% endif %} #}
+        {% endif %}
         </div>
     </div>
   </nav>
