--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,13 +1,9 @@
-{% extends "./layout/base.html.twig" %}
+{% extends './layout/base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{# {% block title %}Log in!{% endblock %}
 
 {% block body %}
-
-<h1>Page de connexion</h1>
-<p>Si vous n'avez pas encore de compte, veuillez-vous inscrire en suivant ce lien : <a href="{{ path('app_utilisateur_inscription') }}">S'inscrire</a></p>
-
-    <form method="post" action="{{ path('app_utilisateur_connexion') }}">
+    <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -39,9 +35,8 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        {# <button class="btn btn-lg btn-primary" type="submit">
+            Sign in
         </button>
     </form>
-{% endblock %}
-
+{% endblock %}  #}
