--- a/templates/pages/aventure/prologue.html.twig
+++ b/templates/pages/aventure/prologue.html.twig
@@ -1,18 +1,17 @@
 {% extends "./layout/base.html.twig" %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/Syrul/Desktop/Dev web/jeuxDeRoleC-T/src/Controller/AventureController.php</code></li>
-        <li>Your template at <code>C:/Users/Syrul/Desktop/Dev web/jeuxDeRoleC-T/templates/aventure/index.html.twig</code></li>
-    </ul>
-</div>
+    <main class="bg-prologue">
+    <section class="p-5">
+    <div class="container col-lg-8">
+    <div class="bg-dark parchemin rounded miseenpage overflow-auto">
+    <p class="text-light text-center p-5 medievalsharp-regular">Prologue</p>
+    <p class="text-light text-center p-5 medievalsharp-text">Issu d’une fratrie de 4 enfants, vous êtes le petit dernier. Vous avez toujours voulu faire vos preuves mais les aléas de la vie ne vous ont pas laissé la possibilité de prouver de quoi vous étiez capable jusqu'à aujourd’hui.
+Il est tard, le soleil s’est couché depuis plusieurs heures, mais vous ne trouvé pas le sommeil. Vous voyez le temps passer au fond de votre lit, les yeux rivés au plafond. 
+Est-ce un effet de l’assoupissement, ou rêvé-vous déjà ? Toujours est -il que vous commencé à voir des formes apparaître au plafond. Indistinctes au début, elles commencent à devenir clair au fur et à mesure que vos yeux les scrutent. Des silhouettes humaines se dessinent, ainsi que d’autres plus ou moins identifiables. Vous croyez reconnaître un dragon en train de combattre un homme en armure armé d’une épée. 
+</p>
+    </div>
+    </div>
+    </section>
+    </main>
 {% endblock %}
