--- a/templates/pages/aventure/prologue.html.twig
+++ b/templates/pages/aventure/prologue.html.twig
@@ -1,17 +1,35 @@
 {% extends "./layout/base.html.twig" %}
 
 {% block body %}
-    <main class="bg-prologue">
-    <section class="p-5">
-    <div class="container col-lg-8">
-    <div class="bg-dark parchemin rounded miseenpage overflow-auto">
-    <p class="text-light text-center p-5 medievalsharp-regular">Prologue</p>
-    <p class="text-light text-center p-5 medievalsharp-text">Issu d’une fratrie de 4 enfants, vous êtes le petit dernier. Vous avez toujours voulu faire vos preuves mais les aléas de la vie ne vous ont pas laissé la possibilité de prouver de quoi vous étiez capable jusqu'à aujourd’hui.
-Il est tard, le soleil s’est couché depuis plusieurs heures, mais vous ne trouvé pas le sommeil. Vous voyez le temps passer au fond de votre lit, les yeux rivés au plafond. 
-Est-ce un effet de l’assoupissement, ou rêvé-vous déjà ? Toujours est -il que vous commencé à voir des formes apparaître au plafond. Indistinctes au début, elles commencent à devenir clair au fur et à mesure que vos yeux les scrutent. Des silhouettes humaines se dessinent, ainsi que d’autres plus ou moins identifiables. Vous croyez reconnaître un dragon en train de combattre un homme en armure armé d’une épée. 
-</p>
-    </div>
-    </div>
-    </section>
-    </main>
+	<main class="bg-prologue">
+		<section class="p-5">
+			<div class="container col-lg-8">
+				<div class="parchemin rounded miseenpage">
+					<h1 class="text-dark text-center medievalsharp-regular prologuetitre">Prologue</h1>
+                    <div class="container container1">
+					<p class="text-dark text-center medievalsharp-text">Issu d’une fratrie de 4 enfants, vous êtes le petit dernier. Vous avez toujours voulu faire vos preuves mais les aléas de la vie ne vous ont pas laissé la possibilité de prouver de quoi vous étiez capable jusqu'à aujourd’hui.
+						Il est tard, le soleil s’est couché depuis plusieurs heures, mais vous ne trouvé pas le sommeil. Vous voyez le temps passer au fond de votre lit, les yeux rivés au plafond.
+                        <p class="text-dark text-center medievalsharp-text">
+						Est-ce un effet de l’assoupissement, ou rêvé-vous déjà ? Toujours est -il que vous commencé à voir des formes apparaître au plafond. Indistinctes au début, elles commencent à devenir clair au fur et à mesure que vos yeux les scrutent. Des silhouettes humaines se dessinent, ainsi que d’autres plus ou moins identifiables. Vous croyez reconnaître un dragon en train de combattre un homme en armure armé d’une épée.
+                        vos preuves mais les aléas de la vie ne vous ont pas laissé la possibilité de prouver de quoi vous étiez capable jusqu'à aujourd’hui.
+						Il est tard, le soleil s’est couché depuis plusieurs heures, mais vous ne trouvé pas le sommeil. Vous voyez le temps passer au fond de votre lit, les yeux rivés au plafond.</p>
+                        <p class="text-dark text-center medievalsharp-text">
+                        Est-ce un effet de l’assoupissement, ou rêvé-vous déjà ? Toujours est -il que vous commencé à voir des formes apparaître au plafond. Indistinctes au début, elles commencent à devenir clair au fur et à mesure que vos yeux les scrutent. Des silhouettes humaines se dessinent, ainsi que d’autres plus ou moins identifiables. Vous croyez reconnaître un dragon en train de combattre un homme en armure armé d’une épée. 
+                        Les formes bougent et changent au fur et à mesure que vos yeux les regardent.  Le son s’ajoute au décor ainsi constitué.
+                        Le dragon se mue en un bateau naviguant sur une mer houleuse, un homme hurle depuis le mat puis tombe et s’écrase au sol en hurlant tandis que la tempête se déchaîne et que l’eau submerge le bateau à chaque vague venant frapper sa coque. 
+                        L’océan laisse ensuite place à une forêt luxuriante peuplée d’êtres plus ou moins distincts. Vous croyez reconnaître des gobelins ou se qui y ressemble, munis de torches, mettant le feu aux arbres. Les animaux et autres habitants des sous-bois se mettent à fuir dans une course effrénée mêlant angoisse, peur et dévastation.<p>
+                        <p class="text-dark text-center medievalsharp-text">
+                        Puis d’un seul coup, tout disparaît et vous vous retrouvez dans votre chambre, les yeux toujours ouverts.  
+                        Exténué, vous finissez par sombrer dans un sommeil profond.
+                        Le lendemain matin, vous vous réveillez pour partir travailler dans la menuiserie familiale, avec tout de même le souvenir tenace des visions de la nuit.
+                        Après un court instant de réflexion pour discerner le vrai du faux, vous décidé que ses visions réelles ou non sont un signe. 
+                        Vous vous levez, préparez vos affaires, vêtements chauds, vivres et votre arme, une épée mal-équilibrée qui vous a été offerte par votre grand-père. 
+                        Après un dernier regard à votre maison dans laquelle toute votre famille dors toujours, vous vous éloigné munis de vos affaire vers une destination inconnue mais que vous savez exister.<p>
+
+                    </div>
+					</p>
+				</div>
+			</div>
+		</section>
+	</main>
 {% endblock %}
