--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,22 +1,22 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg text-light">
     <div class="container-fluid">
         <div class="d-flex col-5">
-          <a class="navbar-brand" href="{{ path('app_homepage') }}">C&W</a>
+          {# <a class="navbar-brand text-light" href="{{ path('app_homepage') }}">C&W</a> #}
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ path('app_homepage') }}">Accueil</a>
+                <a class="nav-link active text-light" aria-current="page" href="{{ path('app_homepage') }}">Accueil</a>
               </li>
               {% if is_granted('ROLE_USER') %}
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_aventure') }}">Aventure</a>
+                <a class="nav-link text-light" href="{{ path('app_aventure') }}">Aventure</a>
               </li>
               {% endif %}
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Codex
                 </a>
                 <ul class="dropdown-menu">
@@ -29,6 +29,7 @@
           </div>
         </div>
         <div class="d-flex col-5 me-5">
+        <p>Citadelles & Wyverns</p>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
